# ratms

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION_PLAN_ANALYTICS.md  PRODUCTION_PLAN.md  PROJECT_REVIEW.md  PROJECT_STATUS.md  README.md  test_api.py  test_api_detailed.py  test_simple.py
AlgorithmsAndDataStructures/: AlgorithmsAndDataStructures.cbp  AlgorithmsAndDataStructures.depend  AlgorithmsAndDataStructures.layout  Segwick.files  main.cpp  makefile
AlgorithmsAndDataStructures/include/: bag.h  binarysearch.h  mybag.h  myqueue.h  mystack.h
AlgorithmsAndDataStructures/src/: bag.cpp  binarysearch.cpp  mybag.cpp  myqueue.cpp  mystack.cpp
CrackingCodeInterview/: CMakeLists.txt  chapter_1.cpp  chapter_1.h  chapter_2.cpp  chapter_2.h  chapter_one.cpp  chapter_one.h  main.cpp  makefile
PythonMachineLearning/: PythonMachineLearning.odt
config/: default.yaml  development.yaml  production.yaml
config/demand_profiles/: weekday_morning.json  weekend.json
config/networks/: test_network.json
data/maps/: munich_schwabing.json
data/traffic_profiles/: default_profiles.json
database/migrations/: 001_initial_schema.sql  002_optimization_runs.sql  003_traffic_profiles.sql  004_travel_times.sql  005_traffic_patterns.sql  006_profile_traffic_lights.sql  007_traffic_feed_entries.sql
docs/: BUILD.md  PRODUCTION_PLAN.md  PresentationIdeas.odt  RATMS.graphml  ratms.drawio
frontend/: TEST_SUMMARY.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/coverage/: coverage-final.json  index.html
frontend/coverage/src/: App.tsx.html  index.html  main.tsx.html
frontend/playwright-report/: index.html
frontend/src/: App.tsx
frontend/src/components/: ForecastComparison.tsx  GAVisualizer.tsx  Layout.tsx  PipelineStatusIndicator.tsx  PredictionConfidenceChart.tsx  PredictionConfigPanel.tsx  ProfilePanel.tsx  RolloutMonitor.tsx  SimulationControl.test.tsx  SimulationControl.tsx  SpawnRatePanel.tsx  TrafficLightPanel.tsx  TravelTimePanel.tsx  ValidationConfigPanel.tsx
frontend/src/hooks/: useSimulationStream.test.ts  useSimulationStream.ts
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  MapView.tsx  Optimization.tsx  ProductionDashboard.tsx  SimulationDetail.tsx  Simulations.tsx  Statistics.tsx
frontend/src/services/: apiClient.test.ts  apiClient.ts
frontend/src/test/: setup.ts
frontend/src/types/: api.ts
frontend/tests/: README.md  global-setup.ts  global-teardown.ts
frontend/tests/e2e/: analytics.spec.ts  dashboard.spec.ts  map-controls.spec.ts  map-view.spec.ts  navigation.spec.ts  optimization.spec.ts  simulation-detail.spec.ts  simulations.spec.ts
frontend/tests/e2e-integration/: api-integration.spec.ts
frontend/tests/fixtures/: AnalyticsPage.ts  BasePage.ts  DashboardPage.ts  MapViewPage.ts  OptimizationPage.ts  SimulationsPage.ts
scripts/: download_osm.sh  install-dependencies.sh
simulator/: CMakeLists.txt  TODO.txt  car.h  config.cpp  config.h  defs.h  logger.h  main.cpp  makefile  makefile_debug  ratms.db  road.cpp  road.h  run.sh  simulator.cpp  simulator.h  testmap.cpp  testmap.h  trafficlight.cpp  trafficlight.h  vehicle.cpp  vehicle.h
simulator/Docs/: Simulator.odt  lanechange.txt
simulator/data/profiles/: evening_rush.json  morning_rush.json  night.json  weekend.json
simulator/jstest/: package.json  runJsTest.sh  server.js
simulator/jstest/public/: client.js  index.html
simulator/pytest/: city_map_with_connections.py  map.json  mapgenerator.py  munich.py  network_view.py  ode.py  simple_road.py.orig  simulator  two_lanes.py
simulator/src/: api_main.cpp  config.cpp  config.h  defs.h  ga_optimizer.cpp  logger.cpp  logger.h  main.cpp  road.cpp  road.h  simulator.cpp  simulator.h  trafficlight.cpp  trafficlight.h  utils.h  vehicle.cpp  vehicle.h
simulator/src/api/: continuous_optimization_controller.cpp  continuous_optimization_controller.h  optimization_controller.cpp  optimization_controller.h  prediction_controller.cpp  prediction_controller.h  predictive_optimizer.cpp  predictive_optimizer.h  server.cpp  server.h  time_based_profile_scheduler.cpp  time_based_profile_scheduler.h  traffic_data_controller.cpp  traffic_data_controller.h  traffic_profile_service.cpp  traffic_profile_service.h
simulator/src/core/: road.cpp  road.h  simulator.cpp  trafficlight.cpp  trafficlight.h  vehicle.cpp  vehicle.h
simulator/src/data/storage/: database_manager.cpp  database_manager.h  traffic_feed_storage.cpp  traffic_feed_storage.h  traffic_pattern_storage.cpp  traffic_pattern_storage.h
simulator/src/feed/: i_traffic_data_feed.h  simulated_traffic_feed.cpp  simulated_traffic_feed.h  traffic_feed_data.h
simulator/src/mapping/: network_loader.cpp  network_loader.h  newmap.hpp  newroad.hpp  osm_importer.cpp  osm_importer.h  osm_types.h
simulator/src/metrics/: travel_time_collector.cpp  travel_time_collector.h
simulator/src/optimization/: genetic_algorithm.cpp  genetic_algorithm.h  metrics.cpp  metrics.h
simulator/src/prediction/: traffic_predictor.cpp  traffic_predictor.h
simulator/src/tests/: testintersection.cpp  testintersection.h  testmap.cpp  testmap.h  testweb.cpp  testweb.h
simulator/src/tools/: osm_import_main.cpp
simulator/src/unit_tests/: config_test.cpp  genetic_algorithm_test.cpp  metrics_test.cpp  network_loader_test.cpp  road_test.cpp  simulator_test.cpp  timing_validator_test.cpp  traffic_feed_test.cpp  traffic_predictor_test.cpp  trafficlight_test.cpp  travel_time_collector_test.cpp  vehicle_test.cpp
simulator/src/unit_tests/fixtures/: test_fixtures.cpp  test_fixtures.h
simulator/src/unit_tests/helpers/: test_helpers.cpp  test_helpers.h
simulator/src/unit_tests/integration/: api_server_test.cpp  database_manager_integration_test.cpp
simulator/src/unit_tests/mocks/: mock_database_manager.h  mock_simulator.h
simulator/src/utils/: config.cpp  logger.cpp  logger.h  utils.h
simulator/src/validation/: timing_validator.cpp  timing_validator.h
simulator/test/: animtries.py  ode.py  simple_road.py  two_lanes.py  view.py
tools/: osm_to_ratms.py
(+27 files in other folders)
